--- a/Campus+.html
+++ b/Campus+.html
@@ -263,7 +263,7 @@
                     <h1 id="1" class="middle_title" style="">The Context: <br>Online Research, Field Trip and Interview</h1>
                     <h3>What are the current reporting process and existing problems?</h3>
                     <P>
-                        Students have several ways to report a facility issue - by filling out a complicated form, sending an email, making a phone call, or directly going to the facilities management building.
+                        Students have several ways to report a building or facility issue - by filling out a complicated form, sending an email, making a phone call, or directly going to the facilities management building.
                     </P>
                     <div>
                         <img class="img" src="images/Campus+/Online_Research_1.png" style="height: 200px;  ">
@@ -325,7 +325,7 @@
                     <h1 id="3" class="middle_title" style="">Insight</h1>
                     <h1>Students need the <b>motivation and easier and simpler ways to report and track</b> facility and building issues.</h1>
                     <h1>Facility staff also need a better way to know the existence, and prioritize facility and building issues.</h1>
-                    <h1>Besides, students have the need to find a facility or a building.</h1>
+
                 </div>
             </div>
         </div>
@@ -392,7 +392,7 @@
 
                 <div class="expanded__content" style="width: 100%;">
                     <h1 id="5" class="middle_title" style="width: 100%;">Information Architecture</h1>
-                    <img src="./images/Campus+/Campus+@2x.png" style="width: 80%; margin-left: 10%;">
+                    <img src="./images/Campus+/Campus+@2x.png" style="width: 100%; margin-left: 0%;">
                 </div>
 
             </div>
@@ -460,27 +460,9 @@
         </div>
     </div>
 
-    <div class="expanded landing__section">
-        <div class="container">
-            <div class="expanded__inner">
 
-                <div class="expanded__content">
-                    <h1 class="expanded__title">Homepage</h1>
 
-                    <h3>Facility and Building Management</h3>
-                    <p>
-                        Students can track issues and get notified when there are updates on the status. After realizing reporting issues are usually related with finding specific buildings and facilities, I expanded the scope of this project for a little bit. For example, students
-                        could search for a building, find vending machines in a specific building in the app, and get notified when one of them are broken.
-                    </p>
-                </div>
-                <div class="expanded__media">
-                    <img class="img" src="./images/Campus+/HiFi/Facilities_MockUp.png" width="70%">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="expanded landing__section">
+    <!-- <div class="expanded landing__section">
         <div class="container">
             <div class="expanded__inner">
 
@@ -497,57 +479,18 @@
                 </div>
             </div>
         </div>
-    </div>
-
+    </div> -->
     <div class="expanded landing__section">
         <div class="container">
             <div class="expanded__inner">
 
                 <div class="expanded__content">
-                    <h1 class="expanded__title">Scan</h1>
+                    <h1 class="expanded__title">Homepage</h1>
 
-                    <h3>Minimal Interaction</h3>
+                    <h3>Report an issue, track the process, and get notified.</h3>
                     <p>
-                        Usually, only the middle part of the screen will be used when users are scanning a QR code. Thus, I put the type area at the bottom of the screen to simplify interaction - users don't have to move their fingers during the transition from tapping the "Add"
-                        button to typing the id. Besides, they can also scroll down to go back to the homepage. A haptic feedback will be shown to indicate users when they are closing this page.
-                    </p>
-                </div>
-                <div class="expanded__media">
-                    <img class="img" src="./images/Campus+/HiFi/Scan.png" width="70%">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="expanded landing__section">
-        <div class="container">
-            <div class="expanded__inner">
-
-                <div class="expanded__content">
-                    <h1 class="expanded__title">Issue Reporting</h1>
-
-                    <h3>Students need an easy reporting process.</h3>
-                    <p>
-                        The reporting page is highly simplified - the facility type and id are automatically added, and the description and photo sections are optional. The only required thing is choosing an issue type.
-                    </p>
-                </div>
-                <div class="expanded__media">
-                    <img class="img" src="./images/Campus+/HiFi/IssueReport_MockUp.png" width="70%">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="expanded landing__section">
-        <div class="container">
-            <div class="expanded__inner">
-
-                <div class="expanded__content">
-                    <h1 class="expanded__title">Tracking</h1>
-
-                    <h3>Track the process, and get notified.</h3>
-                    <p>
-                        Students can track issues at this page. Those reported by themselves will be automatically added to tracking issues.
+                        Students can press the "+" button to start reporting issues. After reporting an issue, the issue will be added and tracked at homepage. Different facilities and buildings are differentiated by different colors.<b>It is designed that only after they report an issue can they track it. </b>They
+                        can also get notified when there're some other important updates.
                     </p>
                 </div>
                 <div class="expanded__media">
@@ -562,11 +505,54 @@
             <div class="expanded__inner">
 
                 <div class="expanded__content">
+                    <h1 class="expanded__title">Scan</h1>
+
+                    <h3>Minimal Interaction</h3>
+                    <p>
+                        Students can scan the QR code on the sticker near the facility to report an issue. For those without cellphone in their pockets or without smartphones, they can also type the equipment id to report. <br><br>Usually, only the middle
+                        part of the screen will be used when users are scanning a QR code. Thus, I put the type area at the bottom of the screen to simplify interaction - users don't have to move their fingers during the transition from tapping the "Add"
+                        button to typing the id. Besides, they can also scroll down to go back to the homepage. A haptic feedback will be shown to indicate users when they are closing this page.
+                    </p>
+                </div>
+                <div class="expanded__media">
+                    <img class="img" src="./images/Campus+/HiFi/Scan.png" width="70%">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="expanded landing__section">
+        <div class="container">
+            <div class="expanded__inner">
+
+                <div class="expanded__content" style="width: 50%;">
+                    <h1 class="expanded__title">Issue Reporting</h1>
+
+                    <h3>Students need an easy reporting process.</h3>
+                    <p>
+                        The reporting page is highly simplified - the facility type and id are automatically added, the description and photo sections are optional, and the preset urgency is medium. The only required thing is choosing an issue type.
+                    </p>
+                </div>
+                <div class="expanded__media" style="width: 60%; margin-left: 5%;">
+                    <img class="img" src="./images/Campus+/HiFi/IssueReport_MockUp.png" width="50%">
+                    <img class="img" src="./images/Campus+/HiFi/Finish_Reporting_Mockup.png" width="50%" style="float: right;">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="expanded landing__section">
+        <div class="container">
+            <div class="expanded__inner">
+
+                <div class="expanded__content">
                     <h1 class="expanded__title">Rewards</h1>
 
                     <h3>Report issues and get rewards!</h3>
                     <p>
-                        Students can track issues at this page. Those reported by themselves will be automatically added to tracking issues.
+                        Students can get some benefits, such as cash rewards and coupons, which could motivate them to report issues. Once an issue is confirmed, students can get some points. The first several students reporting an issue will get extra points.
                     </p>
                 </div>
                 <div class="expanded__media">
@@ -580,15 +566,53 @@
         <div class="container">
             <div class="expanded__inner">
 
+                <div class="expanded__content" style="width: 50%; margin-top: -100px;">
+                    <h1 class="expanded__title">Iteration</h1>
+
+                    <h3>Keep it simple</h3>
+                    <p>
+                        My original design decision is to integrate the function of searching and finding a building, and checking the facilities inside a building into the app. However, I realized it's both difficult and unnecessary for campus+ to have such functions - why
+                        don't students use Google Maps? Any location-based searching and finding tasks could be integrated into a small feature in Google Maps, and there's no reason for students to switch to another app when finding a building. <br><br>Besides,
+                        the need of finding a drinking fountain or a vending machine doesn't have a high priority - there are many such facilities on campus, and students can easily find them.
+                    </p>
+                </div>
+                <div class="expanded__media" style="width: 60%; margin-left: 5%;">
+                    <img class="img" src="./images/Campus+/HiFi/Facilities_MockUp.png" width="50%">
+                    <img class="img" src="./images/Campus+/HiFi/HuntLib_MockUp.png" width="50%" style="float: right;">
+                    <P class="subtitle">The previous homepage and building details page.</P>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="expanded landing__section" style="">
+        <div class="container">
+            <div class="expanded__inner">
+
+                <div class="expanded__content" style="width: 100%;">
+                    <h1 id="5" class="middle_title" style="width: 100%;">Web App for Facility Administrators</h1>
+                    <P>Facility administrators can filter the tasks by many factors - location, reported times, urgency, etc. Therefore, they can better prioritize tasks when resources and facility staff members are not enough.</P>
+                    <img class="img" src="./images/Campus+/Web.png" style="width: 100%; margin-left: 0%; box-shadow: 0px 0px 20px #c0c0c0;">
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="expanded landing__section">
+        <div class="container">
+            <div class="expanded__inner">
+
                 <div class="expanded__content">
                     <h1 class="expanded__title">Reflection</h1>
 
-                    <h3>Start from the users</h3>
+                    <h3>Thinking from the users</h3>
                     <p>
                         I learned a lot during the user research and was quite surprised about why students don't have the motivation to report issues. It's difficult to educate students to volunteer to report issues, but here comes what I love most about design - we can make
-                        everything better by simplifying reporting process and giving rewards. <br><br>A potential way to further simplify this is to integrate it into a feature in Google Maps. However, considering each school
-                        has different facilities and buildings, I still used a combined approach of app + physical touch point (the stickers).
+                        everything better by simplifying reporting process, giving rewards, and pushing a little bit: only allow them to track an issue after reporting it.
                     </p>
+                    <h3>Less is more</h3>
+                    <P>It's not always comfortable to simplify my design. Here's what I learned: it's not enough to find a way to solve the problem. It's better if you can find the easiest way to solve the problem.</P>
                 </div>
                 <div class="expanded__media">
                     <img src="./images/Campus+/Student.svg" width="70%">
@@ -675,4 +699,4 @@
     </script>
 </body>
 
-</html>
+</html
