--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
         </div>
     </div>
-    <div class="expanded landing__section" <!--style="background-image: linear-gradient(to bottom right, #94D9B3, #22BA70) " -->>
+    <!-- <div class="expanded landing__section">
         <div class="container">
             <div class="expanded__inner">
 
@@ -251,7 +251,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="expanded landing__section" style="background-image: url('images/Pianooooo/0.jpg');
 -webkit-background-size:cover ;">
         <div class="container">
