--- a/Campus+.html
+++ b/Campus+.html
@@ -497,8 +497,8 @@
                     <h3>Location-based reporting</h3>
                     <p>
                         The most comfortable scenario for students is to report the issue as soon as they find it. These stickers will be put near the facilities and buildings, and are differentiated by colors. For example, this blue sticker could be used for drinking fountains.
-                        <br><br> Students only have to scan the QR code to go to the report page. Therefore, they don't have to bother describing the location and other information of the facility. For those without cellphones in their pockets or those
-                        without smart phones, they can still type the ID to report.
+                        <br><br> Students only have to scan the QR code to go to the report page. Therefore, they don't have to bother describing the location and other information of the facility. Alternatively, they can also type the equipment id to
+                        report.
                         <br><br>Besides, such a decentralized way of reporting could help facility administrators prioritize tasks - an issue could be serious and urgent if many students are reporting it.
                     </p>
                 </div>
@@ -518,9 +518,9 @@
 
                     <h3>Minimal Interaction</h3>
                     <p>
-                        Students can scan the QR code on the sticker near the facility to report an issue. For those without cellphone in their pockets or without smartphones, they can also type the equipment id to report. <br><br>Usually, only the middle
-                        part of the screen will be used when users are scanning a QR code. Thus, I put the type area at the bottom of the screen to simplify interaction - users don't have to move their fingers during the transition from tapping the "Add"
-                        button to typing the id. Besides, they can also scroll down to go back to the homepage. A haptic feedback will be shown to indicate users when they are closing this page.
+                        Students can scan the QR code on the sticker near the facility to report an issue. Alternatively, they can also type the equipment id to report (e.g. the environment is too dark for scanning). <br><br>Usually, only the middle part
+                        of the screen will be used when users are scanning a QR code. Thus, I put the type area at the bottom of the screen to simplify interaction - users don't have to move their fingers during the transition from tapping the "Add" button
+                        to typing the id. Besides, they can also scroll down to go back to the homepage, instead of tapping the button on top of the screen. A haptic feedback will be shown to indicate users when they are closing this page.
                     </p>
                 </div>
                 <div class="expanded__media">
