--- a/IBM2.html
+++ b/IBM2.html
@@ -238,7 +238,7 @@
                     </p>
                 </div>
                 <div style="float: right; margin-top: 230px">
-                    <ul class="vMenu" style="">
+                    <ul class="vMenu" style="font-weight: bold;">
                         <li>
                             <a onclick="myFunction(1)" style="cursor: pointer">EDPA</a>
                         </li>
@@ -295,8 +295,7 @@
             <img
               class="img"
               src="images/IBM/EDPA_New/AssetIndex.jpg"
-              style="box-shadow: 0px 0px 20px #c0c0c0;"
-            />
+              style="box-shadow: 0px 0px 20px #c0c0c0;"/>
           </div>
         </div>
       </div>
@@ -351,13 +350,17 @@
       <div class="container">
         <div class="expanded__inner">
           <div class="expanded__content" style="width: 100%">
-            <h1 class="middle_title" style="width: 200%">Insight</h1>
-            <p>
+            <h1 class="middle_title" style="width: 100%">Insight</h1>
+            <h1>
               EDPA is a data asset platform allowing
               <b>non-technical and technical employees to collaborate
                 together</b>
               on big data in a digital era.
-            </p>
+              </h1>
+              <h1>
+                It's also a platform to help companies <b>digitize and integrate</b> their data asset on the cloud.
+
+              </h1>
           </div>
         </div>
       </div>
@@ -464,7 +467,7 @@
       <div class="container">
         <div class="expanded__inner">
           <div class="expanded__content" style="width: 100%">
-            <h1 class="middle_title" style="width: 300%">
+            <h1 class="middle_title" style="">
               What did I learn from that week?
             </h1>
 
